--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.2",
   "description": "Canvas based scroll wheel for vue.js",
   "main": "src/vue-scrollwheel.vue",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RubyRubenstahl/vue-scrollwheeel"
+  },
   "dependencies": {
     "vue2-touch-events": "^2.0.0"
   },
