--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
-  "dependencies": {
+  "peerDependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10"
   },
+  "dependencies": {},
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
